public/stylesheets/style.styl
@font-face
  font-family "Source Sans Pro"
  src url(/fonts/SourceSansPro-Light.ttf) 
  font-weight 300
@font-face
  font-family "Source Sans Pro"
  src url(/fonts/SourceSansPro-Regular.ttf) 
  font-weight 400
@font-face
  font-family "Source Sans Pro"
  src url(/fonts/SourceSansPro-Bold.ttf) 
  font-weight 700
@font-face
  font-family "Source Sans Pro"
  src url(/fonts/SourceSansPro-LightItalic.ttf) 
  font-weight 300 
  font-style italic
@font-face
  font-family "Source Sans Pro"
  src url(/fonts/SourceSansPro-Italic.ttf) 
  font-weight 400 
  font-style italic
@font-face
  font-family "Source Sans Pro"
  src url(/fonts/SourceSansPro-BoldItalic.ttf) 
  font-weight 700 
  font-style italic
@font-face
  font-family "Ubuntu Mono"
  src url(/fonts/UbuntuMono-R.ttf) 
  font-weight 400
@font-face
  font-family "Ubuntu Mono"
  src url(/fonts/UbuntuMono-RI.ttf) 
  font-weight 400 
  font-style italic
@font-face
  font-family "Ubuntu Mono"
  src url(/fonts/UbuntuMono-B.ttf) 
  font-weight 600
@font-face
  font-family "Ubuntu Mono"
  src url(/fonts/UbuntuMono-BI.ttf) 
  font-weight 600 
  font-style italic

body 
  background #f5f5f5 url('/images/noise.png')
  font-family "Source Sans Pro", sans-serif
  color #222
  padding-top 4em
  padding-bottom 5em

h1, h2, h3, h4, h5
  font-family "Source Sans Pro", sans-serif
  color #222

p 
  font-size 1em
  font-family "Source Sans Pro", sans-serif

.profile 
  padding 4px
  border 1px solid #ccc
  box-shadow 1px 3px 3px #ddd

.navbar
  background #313131
  width 100%
  position fixed
  z-index 1000
  padding-top 7px
  padding-bottom 7px

.navbar-top
  top 0
  border-bottom 1px solid #272727

.navbar-bottom
  bottom 0
  border-top 1px solid #272727

.navbar p, .navbar li 
  margin 0
  padding 0

.navbar li
  float left
  padding-left 0
  padding-right 3em

.navbar a 
  text-decoration none
  color #e0e0e0

.navbar a:hover
  color #f5f5f5

